--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.0"
+    "mysql2": "^2.3.0",
+    "socket.io": "^4.5.0"
   }
 }
