--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,14 @@
     "axios": "^0.26.1",
     "firebase": "^9.8.0",
     "moment": "^2.29.2",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-emoji": "^0.5.0",
+    "react-scroll-to-bottom": "^3.0.0",
+    "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.4.8",
     "web-vitals": "^2.1.2"
