--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.19.4",
+    "body-parser": "^1.20.0",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
